Bug 125743 - Writer no longer displays odt <text:list-level-style-image xlink:href="..."> external bullet graphics
Summary: Writer no longer displays odt <text:list-level-style-image xlink:href="..."> ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.3.0 target:7.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2019-06-06 12:54 UTC by Stephan Bergmann
Modified: 2021-08-31 19:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Bergmann 2019-06-06 12:54:38 UTC
Following up on bug 125739 "Bullets and Numbering's Linked graphics no longer links to the external file, embeds it into odt instead":

Starting with (as seen with bibisect of <https://gerrit.libreoffice.org/#/admin/projects/bibisect-linux-64-6.1>) <https://gerrit.libreoffice.org/plugins/gitiles/core/+/9fb7aaf570c03c8a26d763f1205fb8c890e8211a%5E%21> "Make linked graphic register into LinkedManager again" towards LO 6.1:

When opening an odt (that was produced with a LO <= 6.0 version unaffected by bug 125739) that contains bullets with graphics linked to (at least local file-system) files, those graphic bullets are now missing from the bulleted paragraphs.

See bug 125739 comment 0 for a recipe how to generate such a document.  (Because the document will reference a graphic file in the local file system, there is little use in attaching a sample such document here.)
Comment 1 raal 2019-06-06 16:54:54 UTC
Confirm - created file with ver.4.3 aand when open this file, the bullets are missing

Version: 6.3.0.0.beta1+ (x86)
Build ID: 5cfac16dbd4af456a7fb6d52c8953c69a72ba2ba
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win;
Comment 2 Xisco Faulí 2019-06-11 10:20:07 UTC
Same issue as in bug 121044

Adding Cc: to tomaž vajngerl
Comment 3 Commit Notification 2021-08-26 11:27:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e9692564c6145a6662d49ad1735996d17bf1cd7

tdf#125743 sw: fix rendering of graphics bullet with linked images

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-08-31 19:23:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/b0c925d6657dcb3af35e9c09fd479a354fbcc73c

tdf#125743 sw: fix rendering of graphics bullet with linked images

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.