tdf#125743 sw: fix rendering of graphics bullet with linked images

Regression from commit d72145f9307c732ced4a546ac1e5093ec7c1a982 (Move
BackGraphicURL property & friends to BackGraphic + fixes, 2018-03-01),
the problem was that now SvXMLImport::loadGraphicByURL() produces a
Graphic that has its type set to GraphicType::Default, but when
paintGraphicUsingPrimitivesHelper() consumes this graphic, it expects
that the type is either a bitmap or a metafile.

Fix the problem by explicitly loading the image when the default-type,
origin-url-set case happens: this is rendering, so no problem to load
the URL and that will give us the expected graphic type.

This is also meant to keep the original problem fixed, since we only
load images when painting, not during import.

Change-Id: I951bc92d05bb8ec57d2ba6958c47947f8f9b5c78